# ac-local-java

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
ac-jni/: CMakeLists.txt  JniApi.cpp
etc/: launch.vs.json
example/: CMakeLists.txt  LocalDummyExample.java  example-manifest.mf.in
src/: CMakeLists.txt
src/main/java/com/alpacacore/: AlpacaCore.java  ModelAssetDesc.java
src/testFixtures/java/com/alpacacore/: TestLocalDummy.java
test/: CMakeLists.txt  t-JniDict.cpp
